--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
     <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#5bbad5">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v20" media="all">
+    <link rel="stylesheet" href="css/style.css" media="all">
     <title>Sipuni - CRM и ПРОДАЖИ</title>
 </head>
 <body>
@@ -26,12 +26,12 @@
                     <ul class="form__fields">
                         <li class="form__field">
                             <label>Имя</label>
-                            <input type="text" name="name" value="" autocomplete="off" autofocus>
+                            <input type="text" class="form__input" name="name" value="" autocomplete="off" autofocus>
                         </li>
                         <li class="form__field">
                             <label>Телефон / E-mail</label>
-                            <input type="text" name="contact" value="" autocomplete="off">
-                            <input type="hidden" name="key" value="" id="form_key">
+                            <input type="text" class="form__input" name="contact" value="" autocomplete="off">
+                            <input type="hidden" name="key" class="form__input" value="" id="form_key">
                         </li>
                         <li class="form__field form--actions">
                             <button type="submit" class="form__button">
@@ -41,11 +41,14 @@
                     </ul>
                 </form>
                 <div class="thank__you hidden">
-                    <p>Спасибо! <br> Заберите подарок у стойки :)</p>
+                    <p>Спасибо! <br> Заберите Ваш подарок у стенда</p>
                 </div>
             </section>
         </main>
     </div>
-    <script src="/js/script.js?v20"></script>
+    <div class="page__refresh">
+        <p>Доступна новая версия. Нажмите чтобы обновить.</p>
+    </div>
+    <script src="/js/script.js"></script>
 </body>
 </html>
