--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,12 @@
                             <input type="text" class="form__input" name="name" value="" autocomplete="off" autofocus>
                         </li>
                         <li class="form__field">
-                            <label>Телефон / E-mail</label>
-                            <input type="text" class="form__input" name="contact" value="" autocomplete="off">
+                            <label>Телефон</label>
+                            <input type="number" class="form__input" name="phone" value="" autocomplete="off">
+                        </li>
+                        <li class="form__field">
+                            <label>E-mail</label>
+                            <input type="text" class="form__input" name="email" value="" autocomplete="off">
                             <input type="hidden" name="key" class="form__input" value="" id="form_key">
                         </li>
                         <li class="form__field form--actions">
@@ -43,7 +47,7 @@
                     </ul>
                 </form>
                 <div class="thank__you hidden">
-                    <p>Спасибо! <br> Заберите Ваш подарок у стенда</p>
+                    <p>Спасибо! <br> Мы с Вами свяжемся в ближайшее время.</p>
                 </div>
             </section>
         </main>
