update sw cache

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                         </li>
                         <li class="form__field form--actions">
                             <button type="submit" class="form__button">
-                                Получить
+                                Отправить заявку
                             </button>
                         </li>
                     </ul>
