replace header logo with text added amocrm logo

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,12 @@
 </head>
 <body>
     <div id="container">
-        <header class="form__logo">&nbsp;</header>
+        <header class="form__header">
+            <h1>
+                Бесплатная<br/>настройка вашей телефонии<br/>для
+                <span class="amocrm__logo"></span>
+            </h1>
+        </header>
         <main>
             <section class="form__wrapper">
                 <form class="contact__form" data-js="js--contact-form-submit">
