--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,9 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/49947028" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </head>
 <body>
-    <div id="container" class="loading">
+    <div id="container">
         <header class="form__header">
             <h1>
-                <span data-js="non--slide">
-                    Бесплатная<br/>настройка вашей телефонии<br/>для
-                    <span class="amocrm__logo"></span>
-                </span>
                 <span data-js="from--slide">
                     Разыгрываем бесплатное<br/>подключение вашей телефонии к CRM на 1 год!
                 </span>
@@ -36,24 +32,16 @@
             <section class="form__wrapper">
                 <form class="contact__form" data-js="js--contact-form-submit">
                     <ul class="form__fields">
-                        <li class="form__field" data-js="non--slide">
-                            <label>Имя</label>
-                            <input type="text" class="form__input" name="name" value="" autocomplete="off" autofocus>
-                        </li>
                         <div class="form__row">
-                            <li class="form__field">
+                            <li class="form__field" style="margin: 0">
                                 <label>Телефон</label>
                                 <input type="tel" class="form__input" name="phone" value="" autocomplete="off">
-                            </li>
-                            <li class="form__field" data-js="non--slide">
-                                <label>E-mail</label>
-                                <input type="email" class="form__input" name="email" value="" autocomplete="off">
                             </li>
                         </div>
                         <li class="form__field form--actions">
                             <input type="hidden" name="key" class="form__input" value="" id="form_key">
                             <button type="submit" class="form__button">
-                                Отправить заявку
+                                Участвовать
                             </button>
                         </li>
                     </ul>
